# learning_de_datasets

sephora_products_and_skincare_reviews/duck_rag/: pyproject.toml
sephora_products_and_skincare_reviews/duck_rag/pipeline/: pipeline.ipynb
