[project]
name = "local-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.2",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "sentence-transformers>=5.4.1",
]
